--- a/JOAO_GUILHERME_SILVA_LIMA_ATIVIDADE03/index.html
+++ b/JOAO_GUILHERME_SILVA_LIMA_ATIVIDADE03/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <main class="carlos">
+    <main>
         <header><div class ="cabecalho">MEU SITE</div></header>
 
         <nav><div class="navegacao">NAVEGAÇÃO</div></nav>
@@ -17,7 +17,7 @@
 
         <aside><div class="lado">CONTEUDO</div></aside>
 
-        <footer><div class="pe">&Eu amo carlos.com </div></footer>
+        <footer><div class="pe">&site.com </div></footer>
     </main>
 
 </body>
